--- a/styles.css
+++ b/styles.css
@@ -3,23 +3,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Permanent+Marker&display=swap');
 .animbox {
   display: flex;
-  width: 100vw;
+  padding:20px;
+  width: 70vw;
   justify-content: center;
   flex-direction: row;
   
 }
 .zonkbox{
     display:flex;
-    width: 100vw;
+    padding:20px;
+    width: 70vw;
     justify-content: center;
     flex-direction: row;
     font-family: Permanent Marker;
-    font-size: 7em;
+    font-size: 6em;
     font-style: normal;
-        font-weight: 200;
+    font-weight: 200;
+    
   
 }
 .zonk{
-    font-family: Permanent Marker;
+
+    
    
 }
