--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Permanent+Marker&display=swap');
-.animbox {
+@import url("https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Permanent+Marker&display=swap");
+.main {
+
   display: flex;
-  padding:20px;
   width: 70vw;
+  margin-right: 50px;
   justify-content: center;
-  flex-direction: row;
   
 }
-.zonkbox{
-    display:flex;
-    padding:20px;
+
+.animbox {
+    display: flex;
+    justify-content: center;
+    width: 70vw;
+  border: 1px solid red;
+}
+.zonkbox {
+    display: flex;
     width: 70vw;
     justify-content: center;
-    flex-direction: row;
-    font-family: Permanent Marker;
-    font-size: 6em;
-    font-style: normal;
-    font-weight: 200;
-    
-  
-}
-.zonk{
-
-    
-   
+  font-family: Permanent Marker;
+  font-size: 6em;
+  font-style: normal;
+  font-weight: 200;
+  border: 1px solid blue;
 }
