--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,15 @@
   font-weight: 200;
   border: 1px solid blue;
 }
+@media(max-width:700px){
+    .zonkbox {
+        font-size: 3em;
+    }
+    img{
+        max-width: 90%;
+        max-height: 90%;
+        
+
+        
+    }
+}
