Change font and font color

--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,8 @@ main {
   display: flex;
   width: 70vw;
   justify-content: center;
-  font-family: Permanent Marker;
-  color: hotpink;
+  font-family: Emilys Candy;
+  color: rgb(250, 39, 39);
   font-size: 6em;
   font-style: normal;
   font-weight: 200;
