--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ main {
   justify-content: center;
   align-items: center;
 }
+.extra {
+  display: flex;
+  height: 20vh;
+}
 
 .animbox {
   display: flex;
@@ -32,36 +36,18 @@ main {
   font-style: normal;
   font-weight: 200;
 }
-.formbox {
+
+form {
   display: flex;
-  height: 70vh;
   flex-direction: column;
   justify-content: center;
-  align-content: center;
+  align-items: center;
+  height: 70vh;
+}
 
-  font-family: Emilys Candy;
-  font-size: 2em;
-}
-.formcontainer {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-}
-.labelbox {
-  display: flex;
-  justify-content: center;
-  color: ivory;
-}
-.buttonbox {
-  display: flex;
-  justify-content: center;
-
-  font-family: Emilys Candy;
-  font-size: 2em;
-}
 button {
   font-family: Emilys Candy;
-  font-size: 0.5em;
+  font-size: 1.5em;
   margin-top: 10px;
   padding: 10px;
   border: none;
@@ -79,10 +65,13 @@ button:active {
   transform: translateY(2px);
 }
 label {
+  font-family: Emilys Candy;
+  font-size: 2em;
   padding: 10px;
   margin-bottom: 10px;
   background-color: rgb(110, 207, 252);
   border-radius: 24px;
+  color: ivory;
 }
 input {
   display: flex;
@@ -92,29 +81,25 @@ input {
   appearance: none;
   outline-style: none;
   border: none;
-
   color: ivory;
   font-family: Emilys Candy;
-  font-size: 1em;
+  font-size: 1.5em;
+  text-align: center;
+  border-bottom: 2px solid ivory;
 }
-
 .inputbox {
   display: flex;
   justify-content: center;
   padding: 5px;
   margin: top 10px;
   font-family: Emilys Candy;
-  font-size: 0.5em;
+  font-size: 1em;
   border-radius: 24px;
   background-color: rgb(110, 207, 252);
   width: 20em;
   height: 2em;
 }
-.inputbox:hover {
-  box-shadow: 0 1px 6px 0 rgba(1, 82, 119, 0.7);
-  border-color: rgba(223, 225, 229, 0);
-}
-@media (max-width: 800px) {
+@media (max-width: 420px) {
   .zonkbox {
     font-size: 3em;
   }
@@ -125,18 +110,33 @@ input {
   .inputbox {
     max-width: 50%;
   }
-
-  .labelbox {
+  input {
     max-width: 50%;
-    font-size: 70%;
   }
-  .buttonbox {
-    max-width: 50%;
-    font-size: 90%;
-    border-radius: 5px;
+}
+@media (max-width: 414px) {
+  label {
+    font-size: 1.2em;
   }
+  button {
+    font-size: 1.2em;
+  }
+}
 
-  .formbox {
-    max-width: 100%;
+@media (min-width: 1024px) {
+  label {
+    font-size: 3em;
+    padding: 15px;
+  }
+  button {
+    font-size: 3em;
+  }
+  .inputbox {
+    width: 30em;
+    height: 3em;
+  }
+  input {
+    width: 10em;
+    font-size: 2.5em;
   }
 }
